--- a/colab_sft_gemini.ipynb
+++ b/colab_sft_gemini.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "8enrppafJPCX"
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "lhqVUjH7ZKUi"
    },
@@ -141,24 +141,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "XyWzoYFxU4r6",
     "outputId": "911da32e-67fe-42eb-add3-1353fc46fb4f"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tunedModels/number-generator-model-y330kq4bvrcv\n",
-      "tunedModels/number-generator-model-d16t2al75c46\n",
-      "tunedModels/number-generator-model-hte4uvo67uda\n",
-      "tunedModels/number-generator-model-7ale2efhsgif\n",
-      "tunedModels/number-generator-model-eoykb5s4p15s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i, m in zip(range(5), genai.list_tuned_models()):\n",
     "  print(m.name)"
@@ -186,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "w-EBSe9wTbLB",
     "outputId": "922e6051-b322-4a48-b4df-3694fa1a09f9"
@@ -199,7 +187,8 @@
        "      base_model_id='',\n",
        "      version='001',\n",
        "      display_name='Gemini 1.5 Flash 001 Tuning',\n",
-       "      description='Fast and versatile multimodal model for scaling across diverse tasks',\n",
+       "      description=('Version of Gemini 1.5 Flash that supports tuning, our fast and versatile '\n",
+       "                   'multimodal model for scaling across diverse tasks, released in May of 2024.'),\n",
        "      input_token_limit=16384,\n",
        "      output_token_limit=8192,\n",
        "      supported_generation_methods=['generateContent', 'countTokens', 'createTunedModel'],\n",
@@ -209,7 +198,7 @@
        "      top_k=64)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,7 +827,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.13"
   }
  },
